--- a/06_curruncy_converter_(custome_hooks)/src/index.css
+++ b/06_curruncy_converter_(custome_hooks)/src/index.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.custom-select {
+  border-radius: 0.5rem;
+  padding: 0.25rem 0.5rem;
+  background-color: rgba(255, 255, 255, 0.3);
+  -webkit-backdrop-filter: blur(4px);
+  backdrop-filter: blur(4px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  cursor: pointer;
+  outline: none;
+}
+
+.custom-select option {
+  background-color: #ffffff;
+  color: #000000;
+}
